# plantprince

./: .env.example  .gitignore  Dockerfile  PROJECT_SPEC.md  README.md  SIMPLE_SETUP.md  config.py  docker-compose.yml  garden-planner.jsx  main.py  nginx.conf  pyproject.yml  run_api.sh  run_simple_api.py  serve_frontend.py  simple_env_test.py  simple_test_server.py  start_backend.py  start_docker.sh  start_garden_planner.py  start_simple.py  start_with_uv.py  test_complete_user_flow.py  test_connection.py  test_docker_flow.sh  test_genai_integration.py  test_imports.py  test_integration.py  test_simple_api.py
.kiro/specs/smart-garden-planner/: WIREFRAMES.txt  design.md  openapi.json  requirements.md  tasks.md
backend/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
backend/models/: database.py  schemas.py
backend/routes/: recommendations.py
backend/services/: __init__.py  llm_service.py  logging_service.py  requestinfo.py  storage.py
frontend/: Dockerfile  index.html  test_frontend.html
models/: __init__.py
routes/: __init__.py  recommendations.py
services/: logging_service.py
terraform/: .gitignore  README.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
